Add new Augury stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -56,6 +56,10 @@ Parameters:
   CastleSecretsVersion: { Type: String }
   CmsEcrImageTag: { Type: String } #####
   CmsSecretsVersion: { Type: String } #####
+  AuguryEcrImageTag: { Type: String }
+  AugurySecretsVersion: { Type: String }
+  FeederEcrImageTag: { Type: String } #####
+  FeederSecretsVersion: { Type: String } #####
 
 Resources:
   CastleStack:
