Pass listener priority prefixes to provisioned stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -30,36 +30,49 @@ Parameters:
   EchoServiceToken: { Type: String }
   EcsAsgOutboundTrafficSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
 
-  PublishEcrImageTag: { Type: String } #####
-  PublishSecretsVersion: { Type: String } #####
+  PublishEcrImageTag: { Type: String }
+  PublishSecretsVersion: { Type: String }
+  PublishSharedAlbListenerRulePriorityPrefix: { Type: String }
   MetricsEcrImageTag: { Type: String }
   MetricsSecretsVersion: { Type: String }
-  IframelyEcrImageTag: { Type: String } #####
-  IframelySecretsVersion: { Type: String } #####
+  MetricsSharedAlbListenerRulePriorityPrefix: { Type: String }
+  IframelyEcrImageTag: { Type: String }
+  IframelySecretsVersion: { Type: String }
+  IframelySharedAlbListenerRulePriorityPrefix: { Type: String }
   GroveEcrImageTag: { Type: String }
   GroveSecretsVersion: { Type: String }
-  PlayEcrImageTag: { Type: String } #####
-  PlaySecretsVersion: { Type: String } #####
+  GroveSharedAlbListenerRulePriorityPrefix: { Type: String }
+  PlayEcrImageTag: { Type: String }
+  PlaySecretsVersion: { Type: String }
+  PlaySharedAlbListenerRulePriorityPrefix: { Type: String }
   StyleguideEcrImageTag: { Type: String }
   StyleguideSecretsVersion: { Type: String }
-  NetworksEcrImageTag: { Type: String } #####
-  NetworksSecretsVersion: { Type: String } #####
+  StyleguideSharedAlbListenerRulePriorityPrefix: { Type: String }
+  NetworksEcrImageTag: { Type: String }
+  NetworksSecretsVersion: { Type: String }
+  NetworksSharedAlbListenerRulePriorityPrefix: { Type: String }
   DovetailRouterEcrImageTag: { Type: String }
   DovetailRouterSecretsVersion: { Type: String }
-  IdEcrImageTag: { Type: String } #####
-  IdSecretsVersion: { Type: String } #####
+  IdEcrImageTag: { Type: String }
+  IdSecretsVersion: { Type: String }
+  IdSharedAlbListenerRulePriorityPrefix: { Type: String }
   RemixEcrImageTag: { Type: String }
   RemixSecretsVersion: { Type: String }
-  ExchangeEcrImageTag: { Type: String } #####
-  ExchangeSecretsVersion: { Type: String } #####
+  RemixSharedAlbListenerRulePriorityPrefix: { Type: String }
+  ExchangeEcrImageTag: { Type: String }
+  ExchangeSecretsVersion: { Type: String }
+  ExchangeSharedAlbListenerRulePriorityPrefix: { Type: String }
   CastleEcrImageTag: { Type: String }
   CastleSecretsVersion: { Type: String }
-  CmsEcrImageTag: { Type: String } #####
-  CmsSecretsVersion: { Type: String } #####
+  CastleSharedAlbListenerRulePriorityPrefix: { Type: String }
+  CmsEcrImageTag: { Type: String }
+  CmsSecretsVersion: { Type: String }
+  CmsSharedAlbListenerRulePriorityPrefix: { Type: String }
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
-  FeederEcrImageTag: { Type: String } #####
-  FeederSecretsVersion: { Type: String } #####
+  AugurySharedAlbListenerRulePriorityPrefix: { Type: String }
+  FeederEcrImageTag: { Type: String }
+  FeederSecretsVersion: { Type: String }
 
 Resources:
   AuguryStack:
