--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -174,13 +174,15 @@ Mappings:
       FrontendMemory: 400
       DovetailCpu: 700
       DovetailMemory: 1000
-  # Each app should be given a listener rule priority prefix between 10 and 49.
+  # Each app should be given a listener rule priority prefix between 1 and 500.
   # In nested stacks, listener rule priorities are created by combining the
-  # prefix with either two (eg 01) or three (eg 765) more digits. Wildcard rules
-  # should use two digits, and VPC-based domains should use three digits.
+  # prefix with exactly two more digits. This allows each app to have up to 99
+  # rules per listener.
   #
   # Higher-traffic apps should be given a higher priority (lower number) to
-  # reduce the number of rules evaluations needed for more common requests
+  # reduce the number of rules evaluations needed for more common requests.
+  #
+  # The final rule priority values must be between 1 and 50000.
   ALBListenerRulePriorityMap:
     Play:
       prefix: 12
@@ -917,45 +919,58 @@ Resources:
       Parameters:
         PublishEcrImageTag: !Ref PublishEcrImageTag
         PublishSecretsVersion: !Ref PublishSecretsVersion
+        PublishSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Publish, prefix]
 
         MetricsEcrImageTag: !Ref MetricsEcrImageTag
         MetricsSecretsVersion: !Ref MetricsSecretsVersion
+        MetricsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Metrics, prefix]
 
         IframelyEcrImageTag: !Ref IframelyEcrImageTag
         IframelySecretsVersion: !Ref IframelySecretsVersion
+        IframelySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Iframely, prefix]
 
         PlayEcrImageTag: !Ref PlayEcrImageTag
         PlaySecretsVersion: !Ref PlaySecretsVersion
+        PlaySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Play, prefix]
 
         GroveEcrImageTag: !Ref GroveEcrImageTag
         GroveSecretsVersion: !Ref GroveSecretsVersion
+        GroveSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Grove, prefix]
 
         StyleguideEcrImageTag: !Ref StyleguideEcrImageTag
         StyleguideSecretsVersion: !Ref StyleguideSecretsVersion
+        StyleguideSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Styleguide, prefix]
 
         NetworksEcrImageTag: !Ref NetworksEcrImageTag
         NetworksSecretsVersion: !Ref NetworksSecretsVersion
+        NetworksSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Networks, prefix]
 
         DovetailRouterEcrImageTag: !Ref DovetailRouterEcrImageTag
         DovetailRouterSecretsVersion: !Ref DovetailrouterSecretsVersion
 
         IdEcrImageTag: !Ref IdEcrImageTag
         IdSecretsVersion: !Ref IdSecretsVersion
+        IdSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Id, prefix]
 
         RemixEcrImageTag: !Ref RemixEcrImageTag
         RemixSecretsVersion: !Ref RemixSecretsVersion
+        RemixSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
 
         ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
         ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
+        ExchangeSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Exchange, prefix]
 
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
+        CastleSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Castle, prefix]
 
         CmsEcrImageTag: !Ref CmsEcrImageTag
         CmsSecretsVersion: !Ref CmsSecretsVersion
+        CmsSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Cms, prefix]
 
         AuguryEcrImageTag: !Ref AuguryEcrImageTag
         AugurySecretsVersion: !Ref AugurySecretsVersion
+        AugurySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Augury, prefix]
 
         FeederEcrImageTag: !Ref FeederEcrImageTag
         FeederSecretsVersion: !Ref FeederSecretsVersion
