Use priority prefixes

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -88,6 +88,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref AuguryEcrImageTag
         SecretsVersion: !Ref AugurySecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref AugurySharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -119,6 +120,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref CastleEcrImageTag
         SecretsVersion: !Ref CastleSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref CastleSharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -148,6 +150,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref CmsEcrImageTag
         SecretsVersion: !Ref CmsSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref CmsSharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -205,6 +208,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref ExchangeEcrImageTag
         SecretsVersion: !Ref ExchangeSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref ExchangeSharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -238,6 +242,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref GroveEcrImageTag
         SecretsVersion: !Ref GroveSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref GroveSharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -266,6 +271,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref IdEcrImageTag
         SecretsVersion: !Ref IdSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref IdSharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -295,6 +301,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref IframelyEcrImageTag
         SecretsVersion: !Ref IframelySecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref IframelySharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -323,6 +330,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref MetricsEcrImageTag
         SecretsVersion: !Ref MetricsSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref MetricsSharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -353,6 +361,7 @@ Resources:
   #       SecretsBase: !Ref SecretsBase
   #       EcrImageTag: !Ref NetworksEcrImageTag
   #       SecretsVersion: !Ref NetworksSecretsVersion
+  #       AlbListenerRulePriorityPrefix: !Ref NetworksSharedAlbListenerRulePriorityPrefix
   #       EcrRegion: !Ref EcrRegion
   #       SecretsStackName: !Ref SecretsStackName
   #       NotificationsStackName: !Ref NotificationsStackName
@@ -389,6 +398,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref PlayEcrImageTag
         SecretsVersion: !Ref PlaySecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref PlaySharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -417,6 +427,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref PublishEcrImageTag
         SecretsVersion: !Ref PublishSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref PublishSharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -448,6 +459,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref RemixEcrImageTag
         SecretsVersion: !Ref RemixSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref RemixSharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -476,6 +488,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref StyleguideEcrImageTag
         SecretsVersion: !Ref StyleguideSecretsVersion
+        AlbListenerRulePriorityPrefix: !Ref StyleguideSharedAlbListenerRulePriorityPrefix
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
