--- a/stacks/provisioned/augury.yml
+++ b/stacks/provisioned/augury.yml
@@ -23,6 +23,7 @@ Parameters:
   SecretsBase: { Type: String }
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
+  AlbListenerRulePriorityPrefix: { Type: String }
   SecretsVersion: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
@@ -42,7 +43,7 @@ Resources:
           Values:
             - augury.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 835 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
