--- a/stacks/provisioned/castle.yml
+++ b/stacks/provisioned/castle.yml
@@ -24,6 +24,7 @@ Parameters:
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
+  AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   EcsAsgOutboundTrafficSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
@@ -43,7 +44,7 @@ Resources:
           Values:
             - castle.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 298 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
