--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -24,6 +24,7 @@ Parameters:
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
+  AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   SharedMemcachedEndpointAddress: { Type: String }
@@ -43,7 +44,7 @@ Resources:
           Values:
             - cms.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 777 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
