--- a/stacks/provisioned/exchange.yml
+++ b/stacks/provisioned/exchange.yml
@@ -27,6 +27,7 @@ Parameters:
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
+  AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
@@ -50,7 +51,7 @@ Resources:
           Values:
             - exchange.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 581 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
   ApiWildcardHostHeaderListenerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
@@ -62,7 +63,7 @@ Resources:
           Values:
             - api.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 582 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "10"]]
 
   SesSendingUser:
     Type: AWS::IAM::User
