--- a/stacks/provisioned/id.yml
+++ b/stacks/provisioned/id.yml
@@ -21,6 +21,7 @@ Parameters:
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
+  AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
@@ -40,7 +41,7 @@ Resources:
           Values:
             - id.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 155 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
