--- a/stacks/provisioned/iframely.yml
+++ b/stacks/provisioned/iframely.yml
@@ -21,6 +21,7 @@ Parameters:
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
+  AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
 
@@ -39,7 +40,7 @@ Resources:
           Values:
             - iframely.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 300 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "10"]]
   DomainHostHeaderListenerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
@@ -51,7 +52,7 @@ Resources:
           Values:
             - embed.pri.org
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 301 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
