--- a/stacks/provisioned/metrics.yml
+++ b/stacks/provisioned/metrics.yml
@@ -21,6 +21,7 @@ Parameters:
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
+  AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
 
@@ -39,7 +40,7 @@ Resources:
           Values:
             - metrics.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 100 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
