--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -29,6 +29,7 @@ Parameters:
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
+  AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
@@ -64,7 +65,7 @@ Resources:
           Values:
             - networks.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 713 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
 
   PublicWebTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
