--- a/stacks/provisioned/publish.yml
+++ b/stacks/provisioned/publish.yml
@@ -21,6 +21,7 @@ Parameters:
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
+  AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   UploadSigningUserName: { Type: String }
@@ -42,7 +43,7 @@ Resources:
           Values:
             - publish.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 200 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
