--- a/stacks/provisioned/remix.yml
+++ b/stacks/provisioned/remix.yml
@@ -24,6 +24,7 @@ Parameters:
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
   SecretsVersion: { Type: String }
+  AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
 
@@ -42,7 +43,7 @@ Resources:
           Values:
             - remix.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 642 # TODO
+      Priority: !Join ["", [!Ref AlbListenerRulePriorityPrefix, "00"]]
   DomainHostHeaderListenerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
