--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -49,8 +49,8 @@ Resources:
     Type: Custom::Echo
     Properties:
       ServiceToken: !Ref EchoServiceToken
-      # SphinxBaseUrl: !Sub https://${Nlb.DNSName}/
-      # VanityNlbDomain: !Sub ${Nlb.LoadBalancerName}.${AWS::Region}.prx.tech
+      SphinxBaseUrl: !Sub https://${Nlb.LoadBalancerName}.${AWS::Region}.prx.tech/
+      VanityNlbDomain: !Sub ${Nlb.LoadBalancerName}.${AWS::Region}.prx.tech
 
   # INTERNET-FACING WEB SERVER #################################################
 
@@ -221,12 +221,12 @@ Resources:
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
               Value: !Ref SharedMemcachedEndpointPort
-            # - Name: SPHINX_SERVER
-            #   Value: !GetAtt Nlb.DNSName
+            - Name: SPHINX_SERVER
+              Value: !GetAtt Nlb.DNSName
             - Name: SPHINX_PORT
               Value: !Ref kSphinxPort
-            # - Name: SPHINX_BASE_URL
-            #   Value: !GetAtt Constants.SphinxBaseUrl
+            - Name: SPHINX_BASE_URL
+              Value: !GetAtt Constants.SphinxBaseUrl
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/networks.prx.org:${EcrImageTag}
           LogConfiguration:
@@ -277,24 +277,24 @@ Resources:
           Value: !Ref AWS::StackId
       Type: network
 
-  # NlbCertificate:
-  #   Type: AWS::CertificateManager::Certificate
-  #   Properties:
-  #     DomainName: !GetAtt Constants.VanityNlbDomain
-  #     Tags:
-  #       - Key: Project
-  #         Value: platform.prx.org # TODO
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: Name
-  #         Value: !Sub >-
-  #           For ${EnvironmentTypeAbbreviation} networks NLB
-  #           ${Nlb.LoadBalancerName}
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     ValidationMethod: DNS
+  NlbCertificate:
+    Type: AWS::CertificateManager::Certificate
+    Properties:
+      DomainName: !GetAtt Constants.VanityNlbDomain
+      Tags:
+        - Key: Project
+          Value: platform.prx.org # TODO
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Name
+          Value: !Sub >-
+            For ${EnvironmentTypeAbbreviation} networks NLB
+            ${Nlb.LoadBalancerName}
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      ValidationMethod: DNS
 
   # SphinxServerSearchdTargetGroup:
   #   Type: AWS::ElasticLoadBalancingV2::TargetGroup
@@ -448,109 +448,109 @@ Resources:
   #         Value: !Ref AWS::StackId
   #     TaskDefinition: !Ref SphinxServerTaskDefinition
 
-  # SphinxServerTaskLogGroup:
-  #   Type: AWS::Logs::LogGroup
-  #   Properties:
-  #     RetentionInDays: 14
-  # SphinxServerExecutionRole:
-  #   Type: AWS::IAM::Role
-  #   Properties:
-  #     AssumeRolePolicyDocument:
-  #       Statement:
-  #         - Action: sts:AssumeRole
-  #           Effect: Allow
-  #           Principal:
-  #             Service: ecs-tasks.amazonaws.com
-  #       Version: "2012-10-17"
-  #     ManagedPolicyArns:
-  #       - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
-  #     Tags:
-  #       - Key: Project
-  #         Value: Metrics # TODO
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  # SphinxServerTaskRole:
-  #   Type: AWS::IAM::Role
-  #   Properties:
-  #     AssumeRolePolicyDocument:
-  #       Statement:
-  #         - Action: sts:AssumeRole
-  #           Effect: Allow
-  #           Principal:
-  #             Service: ecs-tasks.amazonaws.com
-  #       Version: "2012-10-17"
-  #     ManagedPolicyArns:
-  #       - Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceDecryptPolicyArn
-  #       - Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceAccessPolicyArn
-  #     Tags:
-  #       - Key: Project
-  #         Value: Metrics # TODO
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  # SphinxServerTaskDefinition:
-  #   Type: AWS::ECS::TaskDefinition
-  #   Properties:
-  #     ContainerDefinitions:
-  #       - Command:
-  #           - web
-  #         Cpu: 100 # TODO
-  #         Environment:
-  #           - Name: APP_NAME
-  #             Value: networks
-  #           - Name: APP_ENV
-  #             Value: !Ref EnvironmentTypeAbbreviation
-  #           - Name: AWS_SECRETS_BASE
-  #             Value: !Ref SecretsBase
-  #           - Name: AWS_SECRETS_VERSION
-  #             Value: !Ref SecretsVersion
-  #           - Name: AWS_DEFAULT_REGION
-  #             Value: !Ref AWS::Region
-  #           - Name: SIGNER_URL
-  #             Value: !Ref UploadSigningEndpointUrl
-  #           - Name: SIGNER_ACCESS_KEY
-  #             Value: !Ref UploadSigningAccessKeyId
-  #           - Name: MEMCACHED_PORT_11211_TCP_ADDR
-  #             Value: !Ref SharedMemcachedEndpointAddress
-  #           - Name: MEMCACHED_PORT_11211_TCP_PORT
-  #             Value: !Ref SharedMemcachedEndpointPort
-  #           - Name: SPHINX_SERVER
-  #             Value: !GetAtt Nlb.DNSName
-  #           - Name: SPHINX_PORT
-  #             Value: !Ref kSphinxPort
-  #           - Name: SPHINX_BASE_URL
-  #             Value: !GetAtt Constants.SphinxBaseUrl
-  #           - Name: LOCAL_SPHINX
-  #             Value: "true"
-  #         Essential: true
-  #         Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/networks.prx.org:${EcrImageTag}
-  #         LogConfiguration:
-  #           LogDriver: awslogs
-  #           Options:
-  #             awslogs-group: !Ref PublicWebTaskLogGroup
-  #             awslogs-region: !Ref AWS::Region
-  #             awslogs-stream-prefix: ecs
-  #         Memory: 400 # TODO
-  #         Name: !Ref kSphinxContainerName
-  #         PortMappings:
-  #           - ContainerPort: !Ref kWebApplicationPort
-  #           - ContainerPort: !Ref kSphinxPort
-  #     ExecutionRoleArn: !GetAtt SphinxServerExecutionRole.Arn
-  #     NetworkMode: awsvpc
-  #     Tags:
-  #       - Key: Project
-  #         Value: Metrics # TODO
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     TaskRoleArn: !GetAtt SphinxServerTaskRole.Arn
+  SphinxServerTaskLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      RetentionInDays: 14
+  SphinxServerExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Statement:
+          - Action: sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+        Version: "2012-10-17"
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
+      Tags:
+        - Key: Project
+          Value: Metrics # TODO
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+  SphinxServerTaskRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Statement:
+          - Action: sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+        Version: "2012-10-17"
+      ManagedPolicyArns:
+        - Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceDecryptPolicyArn
+        - Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceAccessPolicyArn
+      Tags:
+        - Key: Project
+          Value: Metrics # TODO
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+  SphinxServerTaskDefinition:
+    Type: AWS::ECS::TaskDefinition
+    Properties:
+      ContainerDefinitions:
+        - Command:
+            - web
+          Cpu: 100 # TODO
+          Environment:
+            - Name: APP_NAME
+              Value: networks
+            - Name: APP_ENV
+              Value: !Ref EnvironmentTypeAbbreviation
+            - Name: AWS_SECRETS_BASE
+              Value: !Ref SecretsBase
+            - Name: AWS_SECRETS_VERSION
+              Value: !Ref SecretsVersion
+            - Name: AWS_DEFAULT_REGION
+              Value: !Ref AWS::Region
+            - Name: SIGNER_URL
+              Value: !Ref UploadSigningEndpointUrl
+            - Name: SIGNER_ACCESS_KEY
+              Value: !Ref UploadSigningAccessKeyId
+            - Name: MEMCACHED_PORT_11211_TCP_ADDR
+              Value: !Ref SharedMemcachedEndpointAddress
+            - Name: MEMCACHED_PORT_11211_TCP_PORT
+              Value: !Ref SharedMemcachedEndpointPort
+            - Name: SPHINX_SERVER
+              Value: !GetAtt Nlb.DNSName
+            - Name: SPHINX_PORT
+              Value: !Ref kSphinxPort
+            - Name: SPHINX_BASE_URL
+              Value: !GetAtt Constants.SphinxBaseUrl
+            - Name: LOCAL_SPHINX
+              Value: "true"
+          Essential: true
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/networks.prx.org:${EcrImageTag}
+          LogConfiguration:
+            LogDriver: awslogs
+            Options:
+              awslogs-group: !Ref PublicWebTaskLogGroup
+              awslogs-region: !Ref AWS::Region
+              awslogs-stream-prefix: ecs
+          Memory: 400 # TODO
+          Name: !Ref kSphinxContainerName
+          PortMappings:
+            - ContainerPort: !Ref kWebApplicationPort
+            - ContainerPort: !Ref kSphinxPort
+      ExecutionRoleArn: !GetAtt SphinxServerExecutionRole.Arn
+      NetworkMode: awsvpc
+      Tags:
+        - Key: Project
+          Value: Metrics # TODO
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TaskRoleArn: !GetAtt SphinxServerTaskRole.Arn
